docs: update files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.profiles.active=dev
 
 #swagger
 logging.level.io.swagger.models.parameters.AbstractSerializableParameter=error
+
+#redis
+spring.cache.type=REDIS
+spring.redis.database=0
+spring.redis.port=6379
+spring.redis.jedis.pool.max-wait=10000ms
+spring.redis.jedis.pool.max-active=20
